--- a/Projeto-Crud/lista_produtos.html
+++ b/Projeto-Crud/lista_produtos.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/lista_style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Lista de Produtos</title>
-</head>
-<body>
-    <div class="container-02">
-        <form class="form-group col-md-30 shadow p-3 " id="classe">
-
-            <div class="form-group row" id="classe">                
-                <div class="col-sm-3">
-                    <input type="search" class="form-control" id="search" placeholder="Sua Busca">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/lista_style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="js/script.js" defer></script>
+        <title>Lista de Produtos</title>
+    </head>
+    <body>
+        <div class="container-01">
+            <form class="form-group col-md-30 shadow p-3 " id="classe">
+            
+                <div class="form-group row" id="classe"> 
+                    <div class="col-sm-4">
+                        <h1 class="lista">Lista</h1>         
+                        <input type="search" class="form-control" id="search" placeholder="Sua Busca">
+                    </div>
                 </div>
 
-            </div>
+                <table class="table " id="modal-list">
+                    <thead>
+                        <!--tabela das informações fixas -->
+                        <tr>
+                            <th>ID</th>
+                            <th>NOME PRODUTO</th>
+                            <th>FABRICANTE</th>
+                            <th>CATEGORIA</th>
+                            <th>PREÇO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
-            <table class="table ">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>NOME PRODUTO</th>
-                        <th>FABRICANTE</th>
-                        <th>CATEGORIA</th>
-                        <th>PREÇO</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>002</td>
-                        <td>Café Nestle</td>
-                        <td>Nestle</td>
-                        <td>Café Soluvel</td>
-                        <td>22,00</td>
-                        <td>
-                            <button type="button" class="btn btn-primary" >editar</button>
-                            <button type="button" class="btn btn-danger">excluir</button>
-                        </td>   
-                    </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </form>
         </div>
-        </form>
+    
     </body>
 </html>
